# py-polyglot

./: README.md  pyproject.toml
.github/workflows/: ci.yml
cli/: config.py  main.py  run_local.py  run_remote.py  translate.py  translator.py
