[project]
name = "language-translator-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.102.0",
    "dotenv>=0.9.9",
    "google-genai>=2.2.0",
    "openai>=2.36.0",
    "sacremoses>=0.1.1",
    "sentencepiece>=0.2.1",
    "torch>=2.11.0",
    "transformers>=5.8.0",
]

[project.scripts]
translate = "cli.main:main"
